--- a/modulo06/composer.json
+++ b/modulo06/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
         "monolog/monolog": "^2.3"
+    },
+    "autoload": {
+       "psr-4": { "classes2\\": "classes2/"} 
     }
 }
